GNOME Bugzilla – Bug 745139
gdm no longer starts gnome-initial-setup right
Last modified: 2015-02-25 02:20:00 UTC
All the recent changes to GDM (wayland login screen, user session X server, etc), broke gnome-initial-setup launching. We need to fix it.
Created attachment 297843 [details] [review] local-display: don't use wayland with gnome-initial-setup We haven't yet decided to use gnome-initial-setup on wayland. Before we can, we need to create a wayland based session file for it anyway. This commit makes sure we properly fall back to X11 for gnome-initial-setup.
Created attachment 297844 [details] [review] manager: move definition of StartUserSessionOperation up We're going to call it higher in the code, so move it up a bit
Created attachment 297845 [details] [review] manager: fix initial-setup -> user session transition After the user goes through initial setup, the initial setup program logs the user in. Nowadays, this user session starts on a new X server. The problem is, we also need the initial setup X server to go away, and we need the login screen wayland server to come up, all around the same time. You can't quit one X server on a seat while starting another one up, it doesn't like that, so there's caos, X server segfaults, and unpredictable behavior as to "which session wins". This commit fixes the problem by waiting until the greeter login screen X server is started before starting the user session. This way they don't stomp on each other's toes, and the user session ends up in the foreground.
Created attachment 297846 [details] [review] Revert "defaults: disable InitialSetup for now" This reverts commit 2d089ea6f5c123f8ad67fcab964e9ca8bd58b7ad. It's working again.
Attachment 297843 [details] pushed as 2e2864e - local-display: don't use wayland with gnome-initial-setup Attachment 297844 [details] pushed as 1844bea - manager: move definition of StartUserSessionOperation up Attachment 297845 [details] pushed as 0245cac - manager: fix initial-setup -> user session transition Attachment 297846 [details] pushed as 25cd027 - Revert "defaults: disable InitialSetup for now"