local-display: don't use wayland with gnome-initial-setup

We haven't yet decided to use gnome-initial-setup on wayland.
Before we can, we need to create a wayland based session file
for it anyway.

This commit makes sure we properly fall back to X11 for
gnome-initial-setup.

https://bugzilla.gnome.org/show_bug.cgi?id=745139